fixed spacing in section 2

--- a/css/main.css
+++ b/css/main.css
@@ -128,6 +128,7 @@ button.sign_up_1 { /*Sign up button in description*/
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    gap: 10px;
 }
 
 .card img { /*services images*/
